# lab-final-SE

./: CMakeLists.txt  main.cpp
FactoryMethodLabTest/: CMakeLists.txt  VehicleFactory.h
FactoryMethodLabTest/tests/: VechicleTests.cpp
src/: Vechicle.h  VehicleFactory.h
